# sph-simd

./: .clangd  .gitignore  CMakeLists.txt  SIMD_OPTIMIZATION_REPORT.md  SIMD_PERFORMANCE_REPORT.md  benchmark.sh  build.sh  compare_performance.sh  performance_comparison_summary.csv  portSfml.md  run.sh  run_comparison.sh  setup_env.sh  validate_simd.sh
.cache/clangd/index/: BoundaryManager.cpp.FF549A6DD30E92C1.idx  BoundaryManager.hpp.A898488EB5F931D5.idx  DomainDecomposer.hpp.0DB944B940C5A408.idx  Grid.cpp.63A5F8FF2A1479B1.idx  Grid.hpp.521CFE43F472D185.idx  GridDomainDecomposer.cpp.771ED58A8D8F9C20.idx  GridDomainDecomposer.hpp.8787711082D48737.idx  ParallelExecutor.cpp.5AB8B47F997B53F2.idx  ParallelExecutor.hpp.AF7CDDC3003E52C9.idx  Particle.cpp.1B8FA0DEA7514D91.idx  Particle.hpp.4AD9C02D159E4866.idx  ParticleSystem.cpp.5F729DC1E7C8D1B7.idx  ParticleSystem.hpp.EA254D2CF80A5D8C.idx  Renderer.cpp.54434DFE6A057D59.idx  Renderer.hpp.62969B3D8716304C.idx  SPHConfig.hpp.CBC4970E68811DDB.idx  SPHPhysics.cpp.6AE4EAC53D6E781D.idx  SPHPhysics.hpp.C975CAF551B831C3.idx  SPHSimulation.cpp.34886B9015220728.idx  SPHSimulation.hpp.0E935FA5BAD8892D.idx  Subdomain.cpp.39097A21E9F289F5.idx  Subdomain.hpp.DB88E60D1B122CD4.idx  main.cpp.2E2DA340AEAA141C.idx
build_headless/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  sph_simulation
build_no_simd/: CMakeCache.txt  Makefile  cmake_install.cmake
comparison_results/: summary.csv
diagram/: architecture.md
include/: Grid.hpp  Particle.hpp  ParticleSystem.hpp  Renderer.hpp  SPHConfig.hpp  SPHPhysics.hpp  SPHSimulation.hpp
src/: Grid.cpp  Particle.cpp  ParticleSystem.cpp  Renderer.cpp  SPHPhysics.cpp  SPHSimulation.cpp  main.cpp
